welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:9: error: not found: type Couleur
def faireMotif1(c: Color,d: Couleur){
                            ^